# FooParameterization

./: CMakeCache.txt  CMakeLists.txt  README.md
include/FooParameterization/: Sphere.h  VolumeCalculator.h
src/: Sphere.cpp  VolumeCalculator.cpp  main.cpp
tests/: test_volume_calculator.cpp
